config: change config schema to v1beta2 while maintaining v1beta1 support
Bug: T439496
