# openapi/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: Toolforge Components API
-  version: 0.11.1
+  version: 0.12.0
 servers:
 - url: http://127.0.0.1:8000
   description: Local direct development server.
@@ -1190,12 +1190,15 @@ components:
         config_version:
           anyOf:
           - type: string
-            const: v1beta1
+            enum:
+            - v1beta1
+            - v1beta2
           - type: 'null'
           title: Config Version
-          default: v1beta1
+          default: v1beta2
           examples:
           - v1beta1
+          - v1beta2
           nullable: true
         source_url:
           type: string
